--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@reach/visually-hidden": "^0.1.1",
     "babel-plugin-styled-components": "^1.10.0",
     "gatsby": "^2.3.26",
+    "gatsby-cli": "^2.12.111",
     "gatsby-image": "^2.0.39",
     "gatsby-plugin-offline": "^2.0.25",
     "gatsby-plugin-react-helmet": "^3.0.12",
@@ -32,6 +33,7 @@
     "gatsby-plugin-sitemap": "^2.0.12",
     "gatsby-plugin-styled-components": "^3.0.7",
     "gatsby-plugin-webpack-size": "^0.0.3",
+    "gatsby-remark-images": "^3.3.39",
     "gatsby-source-filesystem": "^2.0.30",
     "gatsby-transformer-json": "^2.1.11",
     "gatsby-transformer-remark": "^2.3.9",
