add prismjs code highlight

--- a/package.json
+++ b/package.json
@@ -34,11 +34,13 @@
     "gatsby-plugin-styled-components": "^3.0.7",
     "gatsby-plugin-webpack-size": "^0.0.3",
     "gatsby-remark-images": "^3.3.39",
+    "gatsby-remark-prismjs": "^3.5.16",
     "gatsby-source-filesystem": "^2.0.30",
     "gatsby-transformer-json": "^2.1.11",
     "gatsby-transformer-remark": "^2.3.9",
     "gatsby-transformer-sharp": "^2.1.18",
     "intersection-observer": "^0.5.1",
+    "prismjs": "^1.22.0",
     "prop-types": "^15.6.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
